--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,84 @@
-venv/
-frontend/node_modules/
+# ==============
+#  MACOS TRASH
+# ==============
+.DS_Store
+.AppleDouble
+.LSOverride
+._*
+
+# Processi temporanei
+Icon?
+ehthumbs.db
+Thumbs.db
+
+# =====================
+#  PYTHON / FASTAPI
+# =====================
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+
+# Virtualenv
+venv/
+venv-trgb/
+.env/
+.python-version
+
+# Database locali
+*.sqlite3
+*.db
+
+# =====================
+#  NODE / VITE / REACT
+# =====================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+dist/
+dist-ssr/
+*.local
+*.cache/
+
+# Vite cache
+.vite/
+.vscode/
+
+# =====================
+#  ENV FILES
+# =====================
+.env
+.env.*
+!.env.development
+!.env.production
+
+# =====================
+#  EDITOR/IDE
+# =====================
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# =====================
+#  ZIP / OUTPUT / TEMP
+# =====================
+*.zip
+*.tar
+*.gz
+*.log
+
+# =====================
+#  FRONTEND BUILD
+# =====================
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
+frontend/.DS_Store
+frontend/._*
+
+# =====================
+#  BACKEND STATIC AUTO
+# =====================
+static/carta_vini.pdf
+static/carta_vini.docx
