--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,6 @@
 .AppleDouble
 .LSOverride
 ._*
-
-# Processi temporanei
 Icon?
 ehthumbs.db
 Thumbs.db
@@ -24,9 +22,14 @@ venv-trgb/
 .env/
 .python-version
 
-# Database locali
+# =====================
+#  TRGB DATABASE / BACKUP
+# =====================
+trgb/app/data/
 *.sqlite3
 *.db
+backups/
+*.backup
 
 # =====================
 #  NODE / VITE / REACT
@@ -39,10 +42,15 @@ dist/
 dist-ssr/
 *.local
 *.cache/
-
-# Vite cache
 .vite/
 .vscode/
+
+# Frontend specific
+frontend/node_modules/
+frontend/dist/
+frontend/.vite/
+frontend/.DS_Store
+frontend/._*
 
 # =====================
 #  ENV FILES
@@ -67,15 +75,7 @@ dist-ssr/
 *.tar
 *.gz
 *.log
-
-# =====================
-#  FRONTEND BUILD
-# =====================
-frontend/node_modules/
-frontend/dist/
-frontend/.vite/
-frontend/.DS_Store
-frontend/._*
+deploy.log
 
 # =====================
 #  BACKEND STATIC AUTO
@@ -83,3 +83,9 @@ frontend/._*
 static/carta_vini.pdf
 static/carta_vini.docx
 static/carta_vini_staff.pdf
+
+# =====================
+#  LEGACY SCRIPTS DA NON VERSIONARE
+# =====================
+run_server_vps.sh
+run_frontend_vps.sh
